<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <TextView
            style="?attr/bsgamesdk_info_text_style"
            android:layout_marginTop="10dp"
            android:text="@string/bsgamesdk_tourist_before" />

        <TextView
            style="?attr/bsgamesdk_info_name_style"
            android:layout_marginTop="10dp" 
            android:id="@+id/bsgamesdk_tourist_name"
            />
    </LinearLayout>

    <TextView
        style="?attr/bsgamesdk_info_text_style"
        android:layout_marginTop="10dp"
        android:text="@string/bsgamesdk_tourist_content" />

    <Button
        android:id="@+id/bsgamesdk_id_tourist_wel_up"
        style="?attr/bsgamesdk_confirm_button_style"
        android:layout_width="120dp"
        android:layout_height="36dp"
        android:layout_marginTop="10dp"
        android:text="@string/bsgamesdk_tourist_up" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
         >

        <TextView
            android:id="@+id/bsgamesdk_id_tourist_switch"
            style="?attr/bsgamesdk_text_image_style"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/bsgamesdk_tourist_switch" />

        <TextView
             android:id="@+id/bsgamesdk_id_tourist_enter"
            style="?attr/bsgamesdk_text_image_style"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/bsgamesdk_tourist_enter" />
    </RelativeLayout>
    

</LinearLayout>
