<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bsgamesdk_id_reg_secondLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                style="?attr/bsgamesdk_info_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bsgamesdk_captcha_title" />

            <TextView
                android:id="@+id/bsgamesdk_id_txt_tel_reg"
                style="?attr/bsgamesdk_text_no_image_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:lines="1"
                android:text="@string/bsgamesdk_captcha_title" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingRight="5dp" >

            <EditText
                android:id="@+id/bsgamesdk_edit_captcha"
                style="?attr/bsgamesdk_basic_editText_style"
                android:layout_width="fill_parent"
                android:hint="@string/bsgamesdk_captcha_hit"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="32"
                android:paddingRight="30dp" />

            <Button
                android:id="@+id/bsgamesdk_id_register_obtain"
                style="?attr/bsgamesdk_reg_button_style"
                android:layout_width="46dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="4dp"
                android:padding="0dp"
                android:text="@string/bsgamesdk_obtain"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/bsgamesdk_register_captchaDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@id/bsgamesdk_id_register_obtain"
                android:background="@null"
                android:contentDescription="@string/bsgamesdk_delbtn"
                android:src="@drawable/bsgamesdk_pic_del"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingRight="5dp" >

            <EditText
                android:id="@+id/bsgamesdk_edit_nicename_reg"
                style="?attr/bsgamesdk_basic_editText_style"
                android:layout_width="fill_parent"
                android:hint="@string/bsgamesdk_nickname"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:maxLength="32"
                android:paddingRight="30dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingRight="5dp" >

            <EditText
                android:id="@+id/bsgamesdk_edit_password_reg"
                style="?attr/bsgamesdk_basic_editText_style"
                android:hint="@string/bsgamesdk_password_hit"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="32"/>
        </RelativeLayout>

        <com.bsgamesdk.android.widget.CheckBoxAgreeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bsgamesdk_id_checkboxAgreeLayout_register_submit"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:paddingRight="5dp" >

            <Button
                android:id="@+id/bsgamesdk_Submit_reg"
                style="?attr/bsgamesdk_confirm_button_style"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:text="@string/bsgamesdk_reg_and_login" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>